{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 234,
  "lineage": "ddc915bc-62f1-372e-9ebc-d140a390e3fd",
  "resources": [
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:158582744427:security-group/sg-0ba7460d479cb102e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba7460d479cb102e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "guide-infra-management-api-alb-sg",
            "name_prefix": "",
            "owner_id": "158582744427",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5e75db3c983e4f4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "guide-infra-management-alb-output-logs",
                "enabled": true,
                "prefix": "api"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:loadbalancer/app/guide-infra-management-api-alb/0937c1a8c4bc97c5",
            "arn_suffix": "app/guide-infra-management-api-alb/0937c1a8c4bc97c5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "guide-infra-management-api-alb-304586820.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:loadbalancer/app/guide-infra-management-api-alb/0937c1a8c4bc97c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "guide-infra-management-api-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ba7460d479cb102e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02dfc32c8ca7819c6"
              },
              {
                "subnet_id": "subnet-04f49038d811bb714"
              },
              {
                "subnet_id": "subnet-05b863cffe7745a3c"
              }
            ],
            "subnets": [
              "subnet-02dfc32c8ca7819c6",
              "subnet-04f49038d811bb714",
              "subnet-05b863cffe7745a3c"
            ],
            "tags": {
              "Name": "tf-guide-infra-management-api-alb",
              "Project": "guide-infra-management"
            },
            "tags_all": {
              "Name": "tf-guide-infra-management-api-alb",
              "Project": "guide-infra-management"
            },
            "vpc_id": "vpc-0c5e75db3c983e4f4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb_sg.aws_security_group.security_group",
            "module.ecs.aws_s3_bucket.s3_bucket",
            "module.server_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:listener/app/guide-infra-management-api-alb/0937c1a8c4bc97c5/740f82d5b6fff02f",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:158582744427:certificate/a6cd1ea1-3dd7-4e69-b7ed-386494e7c4c7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:targetgroup/guide-infra-management-api-tg/dd096d69f7786e2e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:listener/app/guide-infra-management-api-alb/0937c1a8c4bc97c5/740f82d5b6fff02f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:loadbalancer/app/guide-infra-management-api-alb/0937c1a8c4bc97c5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.security_group",
            "module.ecs.aws_acm_certificate.acm",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_target_group.alb",
            "module.ecs.aws_s3_bucket.s3_bucket",
            "module.server_sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:targetgroup/guide-infra-management-api-tg/dd096d69f7786e2e",
            "arn_suffix": "targetgroup/guide-infra-management-api-tg/dd096d69f7786e2e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:158582744427:targetgroup/guide-infra-management-api-tg/dd096d69f7786e2e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "guide-infra-management-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5e75db3c983e4f4"
          }
        }
      ]
    },
    {
      "module": "module.server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:158582744427:security-group/sg-005a3fbc54cfb0011",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005a3fbc54cfb0011",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba7460d479cb102e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "guide-infra-management-api-server-sg",
            "name_prefix": "",
            "owner_id": "158582744427",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5e75db3c983e4f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}